--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "598ddf43",
+   "id": "19e49c8e",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2676f0cc",
+   "id": "83166712",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "274b1de2",
+   "id": "0e0c5a08",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f3a7cf41",
+   "id": "260168aa",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "673bc9c8",
+   "id": "d37500d5",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "2e9f7d6c",
+   "id": "e43cfabc",
    "metadata": {
     "scrolled": true
    },
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "078c156d",
+   "id": "52781a6d",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "ec3df8e9",
+   "id": "c1886ac0",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "e80cecff",
+   "id": "4e94429d",
    "metadata": {},
    "outputs": [
     {
@@ -286,24 +286,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "4d0c3f25",
+   "execution_count": 85,
+   "id": "c472b9a2",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "please enter a word sma\n",
-      "masay\n"
+      "please enter a word papaya\n",
+      "apayapay\n"
      ]
     }
    ],
    "source": [
     "word=input('please enter a word ')\n",
-    "if word[0] == 'a' or word[0] == 'e' or word[0] == \"\":\n",
+    "if word[0] == 'a' or word[0] == 'e' or word[0] == \"i\" or word[0] == \"o\" or word[0] == \"u\":\n",
     "    print(f'{word + 'way'}')\n",
-    "    \n",
     "else:\n",
     "    print(f'{word[1:] + word[0] + \"ay\"}')\n",
     "    "
@@ -312,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06fb5422",
+   "id": "8e3df8d1",
    "metadata": {},
    "outputs": [],
    "source": []
