--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "22c79bd7",
+   "id": "85dd0672",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a8a4cbbb",
+   "id": "3788c7c3",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0b1b552",
+   "id": "80a1e60c",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14812fad",
+   "id": "cd0585b1",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "be674cd7",
+   "id": "c9a81f63",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e3ca8282",
+   "id": "d1860590",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3f9826ee",
+   "id": "88b8761a",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ee4f2f1e",
+   "id": "0bed4133",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "de079af7",
+   "id": "c26861ab",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "9f2c3b1b",
+   "id": "a35ed8da",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "0aeb7595",
+   "id": "2433d79f",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "3a15104a",
+   "id": "eb5f02c2",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "00479f10",
+   "id": "da7c6899",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "ba257aed",
+   "id": "445c20f6",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "8879f567",
+   "id": "445dc36f",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "053c3377",
+   "id": "b1ad4913",
    "metadata": {},
    "outputs": [
     {
@@ -360,16 +360,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "f362b540",
+   "execution_count": 88,
+   "id": "9c431984",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a word: udas\n",
-      "u\n"
+      "Enter a word: asdf\n",
+      "asdfway\n"
      ]
     }
    ],
@@ -377,16 +377,17 @@
     "w = input('Enter a word: ')\n",
     "#or w[0]=='i' or w[0]=='o' oe w[0]=='u')\n",
     "if w[0] == 'a' or w[0] == 'e' or w[0]=='i'or w[0]=='o' or w[0]=='u':\n",
-    "    fir\n",
-    "    \n",
-    "    print(w[0])\n",
+    "    w=w+'way'\n",
+    "    print(w)\n",
+    "else:\n",
+    "    w=\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6dd70444",
+   "id": "8e5b9000",
    "metadata": {},
    "outputs": [],
    "source": []
