--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8b430802",
+   "id": "83726415",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a4c416eb",
+   "id": "b273f58f",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c9ca37f8",
+   "id": "fd4b9f86",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3f81a2b7",
+   "id": "462d17ee",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "39fb9fd8",
+   "id": "47cf99c1",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5a5173b7",
+   "id": "5d67e400",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "347d2a0d",
+   "id": "4aae1384",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "f7b8d422",
+   "id": "b16fb2ed",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01e06aad",
+   "id": "8901c4cd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb1c2401",
+   "id": "d77f7a3b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "09a1d851",
+   "id": "2010f201",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "eaf27743",
+   "id": "b87f8464",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "d3633206",
+   "id": "8b99acac",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "1cd58f9c",
+   "id": "64a892f7",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f45acd1c",
+   "id": "62f6de50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,15 +308,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "362b92f5",
+   "execution_count": 114,
+   "id": "9116e932",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a word: airplane\n"
+      "Enter a word: airplane\n",
+      "irplaneaway\n"
      ]
     }
    ],
@@ -324,14 +325,16 @@
     "word = input(\"Enter a word: \")\n",
     "firstletter = word[0]\n",
     "\n",
-    "if firstletter != \"a\" or \"e\" or \"i\" or \"u\":\n",
-    "    print(f\"{word[-(len(word)-1):]}\")"
+    "if firstletter = \"a\" or \"e\" or \"i\" or \"u\":\n",
+    "    print(f\"{word[-(len(word)-1):]}{firstletter}way\")\n",
+    "else:\n",
+    "    print(f\"{word}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abf6856c",
+   "id": "c098eaa3",
    "metadata": {},
    "outputs": [],
    "source": []
