--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9c99676a",
+   "id": "5e04e92e",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "945963c2",
+   "id": "c214e9d0",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e6784b1e",
+   "id": "58acb823",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35614a9b",
+   "id": "ec9ff236",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "aae97e88",
+   "id": "a8e1713d",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ff0f211c",
+   "id": "5af55b3c",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "60e4ac7f",
+   "id": "7fa141bb",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "82265a04",
+   "id": "bf9054c1",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "e9722fc3",
+   "id": "5cda8e68",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "74055d42",
+   "id": "a582a701",
    "metadata": {},
    "outputs": [
     {
@@ -227,16 +227,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "6ad82280",
+   "execution_count": 69,
+   "id": "1481e8f4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter the word : computer\n",
-      "omputercay\n"
+      "enter the word : pineapple\n",
+      "ineapplepay\n"
      ]
     }
    ],
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17d2d60c",
+   "id": "d5e6206e",
    "metadata": {},
    "outputs": [],
    "source": [
