--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "83c151be",
+   "id": "ce99e441",
    "metadata": {},
    "outputs": [
     {
@@ -213,28 +213,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "cfaa49f6",
+   "execution_count": 62,
+   "id": "b3c5ef65",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a wordahmed\n"
+      "Enter a wordahmed\n",
+      "ahmedway\n"
      ]
     }
    ],
    "source": [
     "word = input ('Enter a word')\n",
-    "if word[0] == ('a, e, i, o, u'):\n",
-    "    print (word=='way+s')"
+    "if word[0] == 'a' or word[0] == 'e' or word[0] == 'i' or word[0] =='o' or word[0] == 'u':\n",
+    "    print(f'{word + 'way'}')\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c05c6384",
+   "id": "b50c51cf",
    "metadata": {},
    "outputs": [],
    "source": []
