--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4cac97d7",
+   "id": "c77df750",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "23b5663f",
+   "id": "fb31271f",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1fbd7ead",
+   "id": "52019f9f",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "03450602",
+   "id": "bf063295",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "039902d5",
+   "id": "60dbac20",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "574bf594",
+   "id": "22697f54",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "a8169c55",
+   "id": "24579baf",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "0593d0fd",
+   "id": "a682a1e1",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "c1a2d733",
+   "id": "230a4c08",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "2c6cc75e",
+   "id": "e2a329cc",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "7c2af1b3",
+   "id": "d8607881",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "f92250dc",
+   "id": "e0e104c8",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "92b59ff0",
+   "id": "dd35214a",
    "metadata": {},
    "outputs": [
     {
@@ -316,19 +316,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "18764f41",
+   "execution_count": 68,
+   "id": "962a70c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 2) (2896991845.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[68], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    if word[0]==a or word[0]==\"e\" or word[0]==\"i2 or xword[0]==\"o\" or word[0]==\"u\":\u001b[0m\n\u001b[0m                                                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 2)\n"
+     ]
+    }
+   ],
    "source": [
     "word=input(\"Write a wort to be translated\")\n",
-    "if word[0]==a or word[0]==e or word[0]==i or xword[0]==o or word[0]==u\n",
+    "if word[0]==\"a\" or word[0]==\"e\" or word[0]==\"i2 or xword[0]==o or word[0]==u:\n",
     "    print(word + \"way\")\n",
-    "else\n",
-    "    translated=\n",
-    "    print()\n",
+    "else:\n",
+    "    translated=word+ay\n",
+    "    print(translated)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af4bd60b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
