--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "85dd0672",
+   "id": "ca72bead",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3788c7c3",
+   "id": "b60609cf",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80a1e60c",
+   "id": "825e2113",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd0585b1",
+   "id": "7097c511",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c9a81f63",
+   "id": "00321954",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d1860590",
+   "id": "4c5b4ef9",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "88b8761a",
+   "id": "c35a6de4",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0bed4133",
+   "id": "8d86440e",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c26861ab",
+   "id": "08b0a3f6",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a35ed8da",
+   "id": "afa57684",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2433d79f",
+   "id": "a1f0a161",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "eb5f02c2",
+   "id": "daaa571b",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "da7c6899",
+   "id": "9e2dfa53",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "445c20f6",
+   "id": "2c7ea19a",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "445dc36f",
+   "id": "ed0113e1",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "b1ad4913",
+   "id": "0a1951cc",
    "metadata": {},
    "outputs": [
     {
@@ -360,8 +360,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "9c431984",
+   "execution_count": 91,
+   "id": "b5c23010",
    "metadata": {},
    "outputs": [
     {
@@ -377,17 +377,19 @@
     "w = input('Enter a word: ')\n",
     "#or w[0]=='i' or w[0]=='o' oe w[0]=='u')\n",
     "if w[0] == 'a' or w[0] == 'e' or w[0]=='i'or w[0]=='o' or w[0]=='u':\n",
-    "    w=w+'way'\n",
-    "    print(w)\n",
+    "    \n",
+    "    print(w+'way')\n",
     "else:\n",
-    "    w=\n",
+    "    w=w[1:]+'ay'\n",
+    "    print(w)\n",
+    "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e5b9000",
+   "id": "7738166e",
    "metadata": {},
    "outputs": [],
    "source": []
