--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "83726415",
+   "id": "f7beadb5",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b273f58f",
+   "id": "d23fd897",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fd4b9f86",
+   "id": "a72a2889",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "462d17ee",
+   "id": "cd1221aa",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "47cf99c1",
+   "id": "cc85cfb4",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5d67e400",
+   "id": "17f9b795",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4aae1384",
+   "id": "d5c474e9",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "b16fb2ed",
+   "id": "2fc94788",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8901c4cd",
+   "id": "931fe28b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d77f7a3b",
+   "id": "6f09d222",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "2010f201",
+   "id": "e368447e",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "b87f8464",
+   "id": "ea70da8f",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "8b99acac",
+   "id": "21870c14",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "64a892f7",
+   "id": "f8e28cbf",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62f6de50",
+   "id": "a687529e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,16 +308,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "id": "9116e932",
+   "execution_count": 120,
+   "id": "1d3153c8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a word: airplane\n",
-      "irplaneaway\n"
+      "Enter a word: tool\n",
+      "toolway\n"
      ]
     }
    ],
@@ -325,16 +325,16 @@
     "word = input(\"Enter a word: \")\n",
     "firstletter = word[0]\n",
     "\n",
-    "if firstletter = \"a\" or \"e\" or \"i\" or \"u\":\n",
-    "    print(f\"{word[-(len(word)-1):]}{firstletter}way\")\n",
+    "if str(firstletter) == \"a\" or \"e\" or \"i\" or \"u\":\n",
+    "    print(f\"{word}way\")    \n",
     "else:\n",
-    "    print(f\"{word}\")"
+    "    print(f\"{word[-(len(word)-1):]}{firstletter}way\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c098eaa3",
+   "id": "c385d8b2",
    "metadata": {},
    "outputs": [],
    "source": []
