--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "215c5c64",
+   "id": "3baaf8ee",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "46022728",
+   "id": "5e9f8f55",
    "metadata": {},
    "outputs": [
     {
@@ -205,16 +205,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "73576ce6",
+   "execution_count": 57,
+   "id": "630179a8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Write a word: excuse\n",
-      "Your word in Pig latim would be: excuseway\n"
+      "Write a word: papaya\n",
+      "Your word in Pig latim would be: apayapay\n"
      ]
     }
    ],
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1141f971",
+   "id": "4e656f71",
    "metadata": {},
    "outputs": [],
    "source": []
