--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b1e71194",
+   "id": "b8401e2b",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "84aa7b41",
+   "id": "57cf6de7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d7327615",
+   "id": "37bba9e9",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4e3e0a44",
+   "id": "b376c881",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "afb5b450",
+   "id": "d1784b27",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc2c48f3",
+   "id": "b6dec369",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "63dd408c",
+   "id": "c0b43858",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a677ba3a",
+   "id": "c447aa3b",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "79ec3f6c",
+   "id": "eaebb6df",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "18bd6f10",
+   "id": "ecb416ba",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "cc373ef1",
+   "id": "23d6dd95",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2049fbe7",
+   "id": "04732b31",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e1936bdb",
+   "id": "fe03fe38",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "01b6a584",
+   "id": "576f2bb4",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a292f9bc",
+   "id": "c633e806",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "509b05b1",
+   "id": "9a5390ad",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "57b907ae",
+   "id": "fd8a6e4c",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "237bc56d",
+   "id": "335578c0",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "90501f4d",
+   "id": "ac7f1aca",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "9dc69732",
+   "id": "cb5fa647",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "8e0987d4",
+   "id": "b2fa986c",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "8387ba9a",
+   "id": "0d93874d",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "f43e8c24",
+   "id": "6ab74c5c",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "1092bcce",
+   "id": "e5b9e5ea",
    "metadata": {},
    "outputs": [
     {
@@ -531,16 +531,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "6f67f8eb",
+   "execution_count": 93,
+   "id": "6c02760d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Write your favourite word: sunshine\n",
-      "usay\n"
+      "Write your favourite word: opaque\n",
+      "paqueoay\n"
      ]
     }
    ],
@@ -550,13 +550,13 @@
     "if word[0]is int:\n",
     "    print(word+way)\n",
     "elif word[0] is not int:\n",
-    "    print (word[-(len(word)-1)]+word[0]+'ay')"
+    "    print (word[-(len(word)-1):len(word)]+ word[0]+'ay')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00674809",
+   "id": "2314f8e9",
    "metadata": {},
    "outputs": [],
    "source": []
