--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "ce99e441",
+   "id": "bd1e9772",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "b3c5ef65",
+   "id": "cd0fc2f2",
    "metadata": {},
    "outputs": [
     {
@@ -230,13 +230,15 @@
     "word = input ('Enter a word')\n",
     "if word[0] == 'a' or word[0] == 'e' or word[0] == 'i' or word[0] =='o' or word[0] == 'u':\n",
     "    print(f'{word + 'way'}')\n",
+    "else:\n",
+    "    print word[1:]\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b50c51cf",
+   "id": "c661d5f1",
    "metadata": {},
    "outputs": [],
    "source": []
