--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c77df750",
+   "id": "6c2525d2",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "fb31271f",
+   "id": "16fd3c32",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "52019f9f",
+   "id": "769ac58b",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "bf063295",
+   "id": "b45ab925",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "60dbac20",
+   "id": "d8ea631e",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "22697f54",
+   "id": "75f1cab2",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "24579baf",
+   "id": "aee81962",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "a682a1e1",
+   "id": "ab06ab23",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "230a4c08",
+   "id": "b73fc320",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "e2a329cc",
+   "id": "742694ac",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "d8607881",
+   "id": "e1d7c24c",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "e0e104c8",
+   "id": "f39a7318",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "dd35214a",
+   "id": "6e0ae2b4",
    "metadata": {},
    "outputs": [
     {
@@ -316,22 +316,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "962a70c3",
+   "execution_count": 69,
+   "id": "c2e7f241",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unterminated string literal (detected at line 2) (2896991845.py, line 2)",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Write a wort to be translatedApple\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'a' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[68], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    if word[0]==a or word[0]==\"e\" or word[0]==\"i2 or xword[0]==\"o\" or word[0]==\"u\":\u001b[0m\n\u001b[0m                                                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 2)\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[69], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m word\u001b[38;5;241m=\u001b[39m\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWrite a wort to be translated\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m word[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m==\u001b[39m\u001b[43ma\u001b[49m \u001b[38;5;129;01mor\u001b[39;00m word[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m==\u001b[39me \u001b[38;5;129;01mor\u001b[39;00m word[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m==\u001b[39mi \u001b[38;5;129;01mor\u001b[39;00m xword[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m==\u001b[39mo \u001b[38;5;129;01mor\u001b[39;00m word[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m==\u001b[39mu:\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(word \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mway\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'a' is not defined"
      ]
     }
    ],
    "source": [
-    "word=input(\"Write a wort to be translated\")\n",
-    "if word[0]==\"a\" or word[0]==\"e\" or word[0]==\"i2 or xword[0]==o or word[0]==u:\n",
+    "word=input(\"Write a word to be translated\")\n",
+    "if word[0]==a or word[0]==e or word[0]==i or xword[0]==o or word[0]==u:\n",
     "    print(word + \"way\")\n",
     "else:\n",
     "    translated=word+ay\n",
@@ -342,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af4bd60b",
+   "id": "817533d6",
    "metadata": {},
    "outputs": [],
    "source": []
