--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ca72bead",
+   "id": "e7d5c64b",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b60609cf",
+   "id": "c73de895",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "825e2113",
+   "id": "7ff3e3a0",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7097c511",
+   "id": "6b8a3309",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "00321954",
+   "id": "c4d9e9e8",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4c5b4ef9",
+   "id": "e82b1413",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c35a6de4",
+   "id": "a3e6c805",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8d86440e",
+   "id": "d6415243",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "08b0a3f6",
+   "id": "af8fde21",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "afa57684",
+   "id": "b949c1cb",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a1f0a161",
+   "id": "9a2133d1",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "daaa571b",
+   "id": "1ba717da",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "9e2dfa53",
+   "id": "ee32035d",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "2c7ea19a",
+   "id": "aae1dab1",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "ed0113e1",
+   "id": "48ba4a00",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "0a1951cc",
+   "id": "1bc73083",
    "metadata": {},
    "outputs": [
     {
@@ -360,16 +360,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "b5c23010",
+   "execution_count": 93,
+   "id": "7c4b01fb",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a word: asdf\n",
-      "asdfway\n"
+      "Enter a word: kidney\n",
+      "idneyay\n"
      ]
     }
    ],
@@ -380,16 +380,14 @@
     "    \n",
     "    print(w+'way')\n",
     "else:\n",
-    "    w=w[1:]+'ay'\n",
-    "    print(w)\n",
     "\n",
-    "    "
+    "    print(w[1:]+'ay')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7738166e",
+   "id": "59836a1b",
    "metadata": {},
    "outputs": [],
    "source": []
