--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f7beadb5",
+   "id": "a7c40008",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d23fd897",
+   "id": "be2f2352",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a72a2889",
+   "id": "680da49f",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cd1221aa",
+   "id": "9faf94a4",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cc85cfb4",
+   "id": "c8365304",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "17f9b795",
+   "id": "b7f128b2",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d5c474e9",
+   "id": "84b0cbe5",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "2fc94788",
+   "id": "a97a9713",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "931fe28b",
+   "id": "b2efe7ed",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f09d222",
+   "id": "49ece8b0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "e368447e",
+   "id": "1fe90792",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "ea70da8f",
+   "id": "649e0f4e",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "21870c14",
+   "id": "4177fa44",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "f8e28cbf",
+   "id": "7f8251fd",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a687529e",
+   "id": "cfe962b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,16 +308,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "id": "1d3153c8",
+   "execution_count": 122,
+   "id": "c769d637",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a word: tool\n",
-      "toolway\n"
+      "Enter a word: computer\n",
+      "omputercway\n"
      ]
     }
    ],
@@ -325,8 +325,8 @@
     "word = input(\"Enter a word: \")\n",
     "firstletter = word[0]\n",
     "\n",
-    "if str(firstletter) == \"a\" or \"e\" or \"i\" or \"u\":\n",
-    "    print(f\"{word}way\")    \n",
+    "if str(firstletter) == \"a\" or str(firstletter) ==\"e\" or str(firstletter) ==\"i\" or str(firstletter) ==\"u\":\n",
+    "    print(f\"{word}ay\")    \n",
     "else:\n",
     "    print(f\"{word[-(len(word)-1):]}{firstletter}way\")"
    ]
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c385d8b2",
+   "id": "37a9c888",
    "metadata": {},
    "outputs": [],
    "source": []
