--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "3baaf8ee",
+   "id": "9bb104d0",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "5e9f8f55",
+   "id": "58dce1aa",
    "metadata": {},
    "outputs": [
     {
@@ -205,22 +205,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "630179a8",
+   "execution_count": 58,
+   "id": "17f13f64",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Write a word: papaya\n",
-      "Your word in Pig latim would be: apayapay\n"
+      "Write a word: how\n",
+      "Your word in Pig latim would be: owhay\n"
      ]
     }
    ],
    "source": [
     "s = input('Write a word: ')\n",
-    "if s[0] == 'a' or s[0] == 'e' or s[0] == 'i' or s[0] == 'o' or s[0] == 'u':\n",
+    "if s[0] == 'aeiou':\n",
     "    s += 'way'\n",
     "    print(f'Your word in Pig latim would be: {s}')\n",
     "else:\n",
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e656f71",
+   "id": "b748d541",
    "metadata": {},
    "outputs": [],
    "source": []
