--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6c2525d2",
+   "id": "828fe58d",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "16fd3c32",
+   "id": "5e56abdb",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "769ac58b",
+   "id": "a6a5f887",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b45ab925",
+   "id": "eed50d1b",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "d8ea631e",
+   "id": "23aa494e",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "75f1cab2",
+   "id": "f73ac3dd",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "aee81962",
+   "id": "5c74d51d",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "ab06ab23",
+   "id": "0a893df7",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "b73fc320",
+   "id": "929ab992",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "742694ac",
+   "id": "f24979af",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "e1d7c24c",
+   "id": "015c3c8c",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "f39a7318",
+   "id": "3b25d49e",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "6e0ae2b4",
+   "id": "4b867fb3",
    "metadata": {},
    "outputs": [
     {
@@ -316,32 +316,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "c2e7f241",
+   "execution_count": null,
+   "id": "dd9ed6b6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Write a wort to be translatedApple\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'a' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[69], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m word\u001b[38;5;241m=\u001b[39m\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWrite a wort to be translated\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m word[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m==\u001b[39m\u001b[43ma\u001b[49m \u001b[38;5;129;01mor\u001b[39;00m word[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m==\u001b[39me \u001b[38;5;129;01mor\u001b[39;00m word[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m==\u001b[39mi \u001b[38;5;129;01mor\u001b[39;00m xword[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m==\u001b[39mo \u001b[38;5;129;01mor\u001b[39;00m word[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m==\u001b[39mu:\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(word \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mway\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'a' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "word=input(\"Write a word to be translated\")\n",
-    "if word[0]==a or word[0]==e or word[0]==i or xword[0]==o or word[0]==u:\n",
+    "if word[0]==\"a\" or \"e\" or \"i\" or \"o\" or \"u\":\n",
     "    print(word + \"way\")\n",
     "else:\n",
     "    translated=word+ay\n",
@@ -352,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "817533d6",
+   "id": "57784914",
    "metadata": {},
    "outputs": [],
    "source": []
