--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c8235cb0",
+   "id": "ee7165af",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "870f69bf",
+   "id": "28ba3bf4",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "71a8571e",
+   "id": "eaabf628",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ee6f0441",
+   "id": "0410e30d",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1b289940",
+   "id": "ad404968",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "21a7b629",
+   "id": "773e5e7c",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b2fd8494",
+   "id": "b7434196",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f68d371d",
+   "id": "aa13ecf8",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "dd3b2a7e",
+   "id": "a4a0f95f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a75fcbb7",
+   "id": "6bb8cfb9",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09138bdf",
+   "id": "9620d530",
    "metadata": {},
    "source": [
     "# markdown things\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f4d5d29e",
+   "id": "c76afb72",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "86fe22e5",
+   "id": "1d7a7e3f",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "03782356",
+   "id": "592a58ae",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c29abe3",
+   "id": "90c4707f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "e0db5d18",
+   "id": "c33851f7",
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f195b60b",
+   "id": "f35f309e",
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a9f34888",
+   "id": "a50f3871",
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a8302ca5",
+   "id": "2d05d8d1",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "0734bd14",
+   "id": "f970e210",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "50965708",
+   "id": "4b742329",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "1303c42d",
+   "id": "358c50e3",
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "e6f3fde9",
+   "id": "c8cb9732",
    "metadata": {},
    "outputs": [
     {
@@ -469,13 +469,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "317c5128",
+   "id": "48595f97",
    "metadata": {},
    "outputs": [],
    "source": [
     "word = input('Enter a word: ')\n",
-    "\n",
-    "if word[0] == 'a' or word[0] == "
+    "#if word[0] == 'a' or word[0] == 'e' or word[0] == 'i' or word[0] == 'o'\n"
    ]
   }
  ],
